--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,7 @@
             ],
             "styles": [
               "src/theme.scss",
-              "src/styles.scss",
-              "node_modules/flag-icon-css/css/flag-icons.min.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
