--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
             ],
             "styles": [
               "src/theme.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/flag-icon-css/css/flag-icons.min.css"
+
             ],
             "scripts": []
           },
