--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
             "styles": [
               "src/theme.scss",
               "src/styles.scss",
-              "node_modules/flag-icon-css/css/flag-icons.min.css"
+              "node_modules/flag-icon-css/css/flag-icons.css"
 
             ],
             "scripts": []
